<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginEnd="@dimen/card_margin"
    android:layout_marginRight="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginBottom="@dimen/card_margin"
    android:minHeight="@dimen/card_min_height">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.habit.EditHabitFragment">

        <TextView
            style="@style/TextAppearance.HabiTracker.Title"
            android:id="@+id/edit_habit_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_offset"
            android:layout_marginLeft="@dimen/title_offset"
            android:text="@string/habit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.HabiTracker.TextInputLayout"
            android:id="@+id/habit_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_habit_fragment_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/habit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.HabiTracker.TextInputLayout"
            android:id="@+id/habit_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/habit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextAppearance.HabiTracker.Label"
            android:id="@+id/habit_frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_frequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_description_input_layout" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/habit_frequency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/habit_frequency_label"
            app:layout_constraintTop_toBottomOf="@+id/habit_description_input_layout"/>

        <TextView
            style="@style/TextAppearance.HabiTracker.Label"
            android:id="@+id/habit_reminder_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/reminder_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_frequency_label" />

        <EditText
            android:id="@+id/habit_reminder_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:hint="@string/reminder_time_hint"
            app:layout_constraintStart_toEndOf="@+id/habit_reminder_label"
            app:layout_constraintTop_toBottomOf="@+id/habit_frequency_spinner"
            android:inputType="time" />

        <Button
            android:id="@+id/save_habit_button"
            style="@style/Widget.HabiTracker.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save_habit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_reminder_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
